# chembl-ai

./: .gitignore  .pre-commit-config.yaml  README.md  notes.md  pyproject.toml  schema_documentation.txt  summary.md
explore/: Explore01.ipynb
exports/: activity.py  assay.py  compound_graph.py  compound_struct.py  create_training_sets.sh  export_graph.sh  helpers.py
exports/training/: common.py  export_graph.py  export_morgan_fp.py
mlruns/: mlflow_gcn.py  mlflow_tinymlp.py
notebooks/: Load01.ipynb  README.md  experiments_logbook.md
spark_airflow/: .env.example  README.md  docker-compose.yml  tunnel.sh
spark_airflow/dags/: mlflow_called_emitter.py  mlflow_tracking_demo.py
src/: app_logic.py  config.py  inference.py  llm_chat.py  main.py
src/exports/: activity.py  assay.py  compound_graph.py  compound_struct.py  helpers.py
src/load/: __init__.py
src/train/: GCN.py  async_logger.py  tinyMLP.py
src/train/export/: export_graph.py  export_morgan_fp.py
src/train/load/: __init__.py  export_morgan_fp.py  parquet_loader.py  paruqet_loader.py  troch_iter_loader.py
src/transforms/: __init__.py  cleaning.py
