[project]
name = "chembl-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=22.0.0",
    "pyspark[connect]==4.1.0",
    "rdkit>=2025.9.3",
    "tinygrad",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
]

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad.git" }
